# awesome-tools

./: .gitignore  README.md  pyproject.toml
Scoop/: README.md
learn_prompting/: README.md
mcp/: README.MD
mcp/src/: server.py
mcp/src/tools/: register.py
mcp_python/: README.MD
mcp_python/src/: server.py
mcp_python/src/libraries/: filesystem.py
mcp_python/src/prompts/: register_prompts.py
mcp_python/src/prompts/template/: template_prompts.py
mcp_python/src/tools/: register_tools.py
microsoft_teams/: README.md  workflows.py
python-packages/paramiko/: sshclient.py
python-packages/subprocess/: subproc.py
python_packages/: README.md
python_packages/django/: README.md
python_packages/paramiko/: README.md  sshclient.py  sshclient_pydantic.py
python_packages/pydantic/: README.md
python_packages/ruff/: README.md
python_packages/subprocess/: subproc.py  subproc_pydantic.py
python_packages/uv/: README.md
ruff/: README.md
vscode/: README.md
windows_command/: README.md
